crates/sith_python_parser/tests/snapshots/valid_syntax@ambiguous_lpar_with_items_if_expr.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/ambiguous_lpar_with_items_if_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..153,
        body: [
            With(
                WithStmt {
                    range: 0..28,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 5..23,
                            context_expr: If(
                                IfExpr {
                                    range: 5..23,
                                    test: BooleanLiteral(
                                        BooleanLiteralExpr {
                                            range: 12..16,
                                            value: true,
                                        },
                                    ),
                                    body: Name(
                                        NameExpr {
                                            range: 6..7,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    orelse: Name(
                                        NameExpr {
                                            range: 22..23,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 25..28,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 25..28,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                WithStmt {
                    range: 29..71,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 34..66,
                            context_expr: If(
                                IfExpr {
                                    range: 34..66,
                                    test: BooleanLiteral(
                                        BooleanLiteralExpr {
                                            range: 55..59,
                                            value: true,
                                        },
                                    ),
                                    body: Generator(
                                        GeneratorExpr {
                                            range: 34..51,
                                            elt: Name(
                                                NameExpr {
                                                    range: 35..36,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 37..50,
                                                    target: Name(
                                                        NameExpr {
                                                            range: 41..42,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Name(
                                                        NameExpr {
                                                            range: 46..50,
                                                            id: Name("iter"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: true,
                                        },
                                    ),
                                    orelse: Name(
                                        NameExpr {
                                            range: 65..66,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 68..71,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                WithStmt {
                    range: 72..120,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 77..115,
                            context_expr: If(
                                IfExpr {
                                    range: 77..115,
                                    test: BooleanLiteral(
                                        BooleanLiteralExpr {
                                            range: 104..108,
                                            value: true,
                                        },
                                    ),
                                    body: Generator(
                                        GeneratorExpr {
                                            range: 77..100,
                                            elt: Name(
                                                NameExpr {
                                                    range: 78..79,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 80..99,
                                                    target: Name(
                                                        NameExpr {
                                                            range: 90..91,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Name(
                                                        NameExpr {
                                                            range: 95..99,
                                                            id: Name("iter"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: true,
                                                },
                                            ],
                                            parenthesized: true,
                                        },
                                    ),
                                    orelse: Name(
                                        NameExpr {
                                            range: 114..115,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 117..120,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 117..120,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                WithStmt {
                    range: 121..152,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 126..147,
                            context_expr: If(
                                IfExpr {
                                    range: 126..147,
                                    test: BooleanLiteral(
                                        BooleanLiteralExpr {
                                            range: 136..140,
                                            value: true,
                                        },
                                    ),
                                    body: Subscript(
                                        SubscriptExpr {
                                            range: 126..132,
                                            value: Name(
                                                NameExpr {
                                                    range: 127..128,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            slice: NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 130..131,
                                                    value: Int(
                                                        0,
                                                    ),
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    orelse: Name(
                                        NameExpr {
                                            range: 146..147,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 149..152,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 149..152,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
