crates/sith_python_parser/tests/snapshots/valid_syntax@assign_targets_terminator.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/assign_targets_terminator.py
---
## AST

```
Module(
    ModModule {
        range: 0..39,
        body: [
            Assign(
                AssignStmt {
                    range: 0..13,
                    targets: [
                        Name(
                            NameExpr {
                                range: 0..1,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            NameExpr {
                                range: 4..5,
                                id: Name("y"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            NameExpr {
                                range: 8..9,
                                id: Name("z"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 12..13,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 15..19,
                    value: Tuple(
                        TupleExpr {
                            range: 15..19,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 15..16,
                                        id: Name("a"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 18..19,
                                        id: Name("b"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
            Assign(
                AssignStmt {
                    range: 20..33,
                    targets: [
                        Name(
                            NameExpr {
                                range: 20..21,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            NameExpr {
                                range: 24..25,
                                id: Name("y"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            NameExpr {
                                range: 28..29,
                                id: Name("z"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 32..33,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 34..38,
                    value: Tuple(
                        TupleExpr {
                            range: 34..38,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 34..35,
                                        id: Name("a"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 37..38,
                                        id: Name("b"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
