crates/sith_python_parser/tests/snapshots/valid_syntax@async_with_statement.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/async_with_statement.py
---
## AST

```
Module(
    ModModule {
        range: 0..21,
        body: [
            With(
                WithStmt {
                    range: 0..20,
                    is_async: true,
                    items: [
                        WithItem {
                            range: 11..15,
                            context_expr: Name(
                                NameExpr {
                                    range: 11..15,
                                    id: Name("item"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 17..20,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 17..20,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
