crates/sith_python_parser/tests/snapshots/valid_syntax@class_def_arguments.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/class_def_arguments.py
---
## AST

```
Module(
    ModModule {
        range: 0..32,
        body: [
            ClassDef(
                ClassDefStmt {
                    range: 0..14,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 6..9,
                    },
                    type_params: None,
                    arguments: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 11..14,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 11..14,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                ClassDefStmt {
                    range: 15..31,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 21..24,
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 24..26,
                            args: [],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 28..31,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 28..31,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
